<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_background"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/welcome_to_the_saw_detector_system"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:background="@android:color/darker_gray"
        android:src="@drawable/main"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/buttonBTOpen"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="turnOn"
            android:text="@string/turn_on"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBTPaired"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="showPaired"
            android:text="@string/show_paired_devices"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBTDiscovery"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="startDiscovery"
            android:text="@string/start_discovery"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBTDiscoveryCancel"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="cancelDiscovery"
            android:text="@string/cancel_discovery"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewBT"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/buttonEnter"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="enterSystem"
        android:text="@string/enter_the_system"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        android:textStyle="bold" />

</LinearLayout>
